# strolidlib

./: .gitignore  README.md  conftest.py  pyproject.toml  utils.py
strolidlib/: __init__.py  audio.py  gpu.py  transcribe.py  utils.py
tests/: __init__.py  test_ambernet.py  test_audio.py  test_gpu.py  test_transcription.py  test_utils.py
