[tool.poetry]
name = "strolidlib"
version = "0.1.0"
description = "Shared utilities for Strolid Conserver links"
authors = ["Jacob Howe <jacob.howe@strolid.com>"]
packages = [{include = "strolidlib"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

