[tool.poetry]
name = "strolidlib"
version = "0.1.0"
description = "Shared utilities for Strolid Conserver links"
authors = ["Jacob Howe <jacob.howe@strolid.com>"]
packages = [{include = "strolidlib"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
torch = "*"
torchaudio = "*"
torchvision = "*"
nemo_toolkit = {extras = ["all"], version = "*"}
vcon = "*"
requests = "*"
validators = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

